--- a/edhacks.html
+++ b/edhacks.html
@@ -1,3 +1,4 @@
+  <!DOCTYPE html>
 <html lang="en">
   <head>
       <link rel="stylesheet" href="style.css" type="text/css" media="screen, projection"/>
@@ -6,6 +7,7 @@
     <meta name="google-signin-scope" content="profile email">
     <meta name="google-signin-client_id" content="YOUR_CLIENT_ID.apps.googleusercontent.com">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
+  
   </head>
 <body>
 <style>
@@ -18,21 +20,21 @@
 </style>
 
 
-<h1> Welcome to our Edu.homework </h1>
-
+<h1> Welcome to Edu.mathhomework </h1>
 <h3> Choose a Grade </h3>
-<center><select name="Grade" id="grade">
-  <option value="n/a">not selected</option>
-  <option value="6th">6th</option>
-  <option value="7th">7th</option>
-  <option value="8th">8th</option>
+<center>
+<button onclick="window.location.href='/6th.html'">6th Grade</button>
+<button onclick="window.location.href='/7th.html'">7th Grade</button>
+<button onclick="window.location.href='/8th.html'">8th Grade</button>
+</center>
 </select>
 </center>
-<h4> ^ Please choose a grade for your math class ^<h4>
+<h3> ^ Please choose a grade for your math class ^</h3>
+<center>
+<button1 onclick="window.location.href='/Us.html'">Who Are We</button1>
+</center>
+<script>
 
-
-   
-   
    
     <!-- <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
     <script>
@@ -53,4 +55,3 @@
     </script> -->
   </body>
   </html>
-  
