--- a/index.html
+++ b/index.html
@@ -55,3 +55,24 @@
     </script> -->
   </body>
   </html>
+
+
+
+
+  ## Inspiration
+We were inspired by Khan Academy. Khan Academy has a variety of subjects and thousands of question per topic. When we would have math homework we didn't know how to solve, we would go to **Khan Academy** and after watching detailed videos and trying out practice problems, we would be clear on our math homework.
+## What it does
+Our projects has explanations and/or examples of math units for middles school grades. 
+## How we built it
+We used HTML, and CSS to build our website.
+## Challenges we ran into
+Some challenges we ran into were
+- Regulating our screen time so we don't stay on the computer too long
+- Connect our buttons to the appropriate webpage
+- Find a way to not let our project interfere with our homework, chores, and other activities we had planned for the weekend
+## Accomplishments that we're proud of
+We're glad that we managed to finish on time, and made our website look the best it could have looked with the time and resources we had.
+## What we learned
+We learned how to create buttons and debug the complexities of our program.
+## What's next for Educator.com
+We will find better ways to help students get their math work done.
